<resources>
    <string name="app_name">开口笑</string>
    <string name="crash_title">应用程序发生崩溃</string>
    <string name="crash_message">我是错误信息</string>
    <string name="details">详细信息</string>
    <string name="common_crash_hint">应用出了点小意外，正在重新启动&#046;&#046;&#046;</string>
    <string name="no_data">暂无数据，点击重试</string>
    <string name="no_net">网络异常，点击重试</string>
    <string name="loading">加载中，请稍候</string>
    <string name="load">加载中&#046;&#046;&#046;</string>
    <string name="hint">提示语</string>
    <string name="wait">请稍候&#046;&#046;&#046;</string>
    <string name="saving">保存中&#046;&#046;&#046;</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="channel_tag_click_search_block">channel_tag_click_search_block</string>
    <string name="channel_tag_comment_reply_info">channel_tag_comment_reply_info</string>
    <string name="channel_tag_input_hint_enter">channel_tag_input_hint_enter</string>
    <string name="channel_tag_reply_child_comment">channel_tag_reply_child_comment</string>
    <string name="channel_tag_not_interested_joke">channel_tag_not_interested_joke</string>
    <string name="channel_tag_remove_photo">channel_tag_remove_photo</string>
    <string name="channel_tag_delete_comment">channel_tag_delete_comment</string>
    <string name="home_fragment">首页</string>
    <string name="evenly_fragment">划一划</string>
    <string name="release_fragment">发布</string>
    <string name="information_fragment">消息</string>
    <string name="profile_fragment">我的</string>
    <string name="wifi_ok">当前网络连接可用</string>
    <string name="no_wifi">当前没有网络连接，请确保已经打开网络</string>
    <string name="save_picture">保存图片</string>
    <string name="save_succeed">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="please_login">请先登录</string>
    <string name="exit">再按一次退出程序</string>
    <string name="describe">描述</string>
    <string name="app_notification_title">开口笑推送段子</string>
    <string name="look">去看看</string>
    <string name="at">\&#064;%s</string>
    <string name="tag_copy_joke_content">smile_copy_joke_text</string>
    <string name="concern">关注</string>
    <string name="follow_title_tip">优秀的人值得关注</string>
    <string name="recommend_user">推荐用户</string>
    <string name="joke_content_text">1. 这是一个测试段子这是一个测试段子这是一个测试段子这是一个测试段子 \n2. 这是一个测试段子这是一个测试段子这是一个测试段子 \n3. 这是一个测试段子这是一个测试段子 \n4. 这是一个测试段子</string>
    <string name="release_time">发布于 %s</string>
    <string name="share_succeed">分享成功</string>
    <string name="page_num">%d/%d</string>
    <string name="page_total">1/%d</string>
    <string name="refresh">换一批</string>
    <string name="release_num">发布 %s</string>
    <string name="follower_num">粉丝 %s</string>
    <string name="search_box_tip">搜索你感兴趣的帖子</string>
    <string name="copy_joke">复制段子</string>
    <string name="copy_succeed">复制成功</string>
    <string name="followed">已关注</string>
    <string name="focus_on">+ 关注</string>
    <string name="me">咸鱼至尊</string>
    <string name="sign">他正在想一个爆炸的签名&#046;&#046;&#046;</string>
    <string name="comment_title">全部评论 %d</string>
    <string name="reply">回复</string>
    <string name="child_user">%s → %s</string>
    <string name="comment_hint">留下你的精彩评论&#046;&#046;&#046;</string>
    <string name="comment_hint_comment">当前为评论段子</string>
    <string name="comment_hint_reply">当前为回复评论</string>
    <string name="delete">删除</string>
    <string name="reply_user">回复：%s</string>
    <string name="please_input_reply">请输入回复内容</string>
    <string name="reply_success">回复成功</string>
    <string name="reply_sub_string_before">回复：</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_cancel">取消关注</string>
    <string name="user_related">用户相关</string>
    <string name="user_info">用户信息</string>
    <string name="account_security">账号与安全</string>
    <string name="universal">通用</string>
    <string name="push_switch">推送开关</string>
    <string name="vibration_switch">震动开关</string>
    <string name="turned_on">已开启</string>
    <string name="mobile_net_loading_pictures">数据流量加载图片</string>
    <string name="clear_cache">清除缓存</string>
    <string name="other_settings">其他设置</string>
    <string name="check_update">检查更新</string>
    <string name="version_name">v%s</string>
    <string name="about_us">关于我们</string>
    <string name="cache">0KB</string>
    <string name="logout">退出登录</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="signature">签名</string>
    <string name="gender">性别</string>
    <string name="man">男</string>
    <string name="birthday">生日</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="bind_invitation_code">绑定邀请码</string>
    <string name="not_bind">未绑定</string>
    <string name="modify_password">修改密码</string>
    <string name="encounter_problems">遇到问题？</string>
    <string name="choose_problems">请选择您遇到的问题</string>
    <string name="forgot_password">忘记密码</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="want_feedback">我要反馈</string>
    <string name="login_protocol_reminder">登录/注册即代表您同意开口笑《隐私政策》\n 和《用户服务协议》</string>
    <string name="input_new_password">请输入新密码(长度6~18)</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password_confirm">请确认新密码</string>
    <string name="modify_confirm">确认修改</string>
    <string name="privacy_policy_title">隐私政策</string>
    <string name="privacy_policy_content_1">\n &#160;&#160;&#160;&#160;&#160;&#160; 咸鱼至尊（详见定义条款，以下也称“我们”）尊重并保护所有使用咸鱼至尊服务的用户个人信息，并对收集的儿童（详见定义条款）个人信息将采取更高级别的保护规则与措施。鉴于此，咸鱼至尊制定本《个人信息保护政策》（以下或称“本政策”）。</string>
    <string name="privacy_policy_content_2">\n &#160;&#160;&#160;&#160;&#160;&#160; 【审慎提醒】在使用咸鱼至尊产品服务前，请您务必仔细阅读并透彻理解本政策，特别是以粗体或粗体加下划线标识的条款，应重点阅读，在确认充分理解并同意后再开始使用。一旦您开始使用咸鱼至尊服务，即表示您已充分理解并同意咸鱼至尊按照本政策收集、存储、使用、转移、披露及处理您的个人信息。需要特别说明的是，本政策不适用于其他第三方向您提供的服务，第三方向您提供的服务适用其向您说明的个人信息保护政策。</string>
    <string name="privacy_policy_content_3">\n &#160;&#160;&#160;&#160;&#160;&#160; 咸鱼至尊建立了开口笑应用程序作为免费应用程序。本服务由咸鱼至尊免费提供，旨在按原样使用。 如果有人决定使用我们的服务，此页面用于通过收集，使用和披露个人信息来告知访客我们的政策。 如果您选择使用我们的服务，则表示您同意收集和使用与此政策相关的信息。我们收集的个人信息用于提供和改进服务。除非本隐私政策中所述，否则我们不会向任何人使用或分享您的信息。 本隐私政策中使用的术语与我们的条款和条件具有相同的含义，除非本隐私政策另有规定，否则可在开口笑处访问。</string>
    <string name="privacy_policy_content_4">\n如何收集和使用个人信息</string>
    <string name="privacy_policy_content_5">\n &#160;&#160;&#160;&#160;&#160;&#160; 为了保证用户注册、账单服务、客户服务各项基本业务功能及提供个性化用户体验的各项扩展业务功能的正常运行，我们会收集、使用下列与您有关的信息。如果您不提供相关信息，可能无法注册成为我们的用户或无法使用和享受我们提供的某些产品和服务的基本功能，或者无法使用相关附加功能或无法达到相关产品和/或服务拟达到的效果。咸鱼至尊会出于本政策所述的以下目的，收集咸鱼至尊产品用户（以下也称“您”）的个人信息：
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 1. 当您使用手机号注开口笑账户时，您需要向我们提供您的手机号码。我们将通过短信验证码的方式核实您的身份信息的有效性，您提交的手机号码用于您注册、登录、绑定账户、密码找回时接受验证码，并且作为您与开口笑指定的联系方式之一，用来接收相关业务通知（如新品上线、服务变更等），并且开口笑可通过此联系方式向您发送业务通知或与您进行业务沟通。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 2. 当您需要发布内容时，我们需要获取访问您本地视频和图片的权限，这样才能选择您本地的图片或者视频进行发布。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 3. 当您与我们联系或提出争议纠纷处理申请时，为了保障您的账户及系统安全，我们需要您提供必要的个人信息（包括账户信息）以核验您的身份。为便于与您联系、尽快帮助您解决问题或记录相关问题的处理方案及结果，我们可能会保存您与我们的沟通、通信/通话记录及相关内容（包括账户信息、您为了证明相关事实提供的其他信息，或您留下的联系方式信息）。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 4. 为了解产品适配性、识别账号异常状态、开展内部数据分析和研究、第三方SDK统计服务以及改善开口笑的产品或服务，我们会收集关于您使用的服务以及使用方式的信息并将这些信息进行关联，这些信息包括：
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 4.1 设备信息：开口笑根据您与开口笑的互动和您所做出的选择，包括您的隐私设置以及您使用的产品和功能，接收并记录您所使用的设备的相关信息，开口笑收集的数据可能包括SDK/API/JS代码版本、浏览器、互联网服务提供商、IP地址、GPS位置以及能够提供相关信息的WLAN接入点、平台、时间戳、应用标识符、应用程序版本、应用分发渠道、独立设备标识符、iOS广告标识符（IDFA)、安卓广告主标识符、网卡（MAC）地址、国际移动设备识别码（IMEI）、设备型号、语言所在地、时区和网络状态。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 4.2 日志信息：当您使用开口笑产品或服务时，我们会自动收集您对我们服务的详细使用情况，作为有关网络日志保存。例如您的搜索查询内容、IP地址、浏览器的类型、电信运营商、使用的语言、访问日期和时间及您访问的网页记录。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 4.3 请注意，单独的设备信息、日志信息等是无法识别特定自然人身份的信息。如果我们将这类非个人信息与其他信息结合用于识别特定自然人身份，或者将其与个人信息结合使用，则在结合使用期间，这类非个人信息将被视为个人信息。</string>
    <string name="privacy_policy_content_6">\n如何注销账号</string>
    <string name="privacy_policy_content_7">\n &#160;&#160;&#160;&#160;&#160;&#160; 当您因为其他原因需要注销当前账号，请在【我的】->【设置】->【账号与安全】->【注销账号】->确认当前账号密码之后即可完成账号的注销。</string>
    <string name="privacy_policy_content_8">\n如何存储、保护您的个人信息</string>
    <string name="privacy_policy_content_9">\n &#160;&#160;&#160;&#160;&#160;&#160; 存储地点：开口笑在中华人民共和国境内收集和产生的个人信息将存储在中华人民共和国境内。如部分产品涉及跨境业务，相关服务提供方需要向境外机构传输境内收集的相关个人信息的，相关服务提供方会按照法律法规和相关监管部门的规定执行。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 2. 存储期限：我们在为您提供满足产品和服务目的所必需且最短的期间内保留您的个人信息，例如：当您使用我们的注册功能时，我们需要收集您的手机号码，且在您提供后并在您使用该功能期间，我们需要持续保存您的手机号码，以向您正常提供该功能、保障您的账号和系统安全。此外，我们或对您的相关信息保存至相关法律所规定的必要期限。在超出上述存储期限后，我们会根据适用法律的要求对您的个人信息进行删除或匿名化处理。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 3. 您的个人信息安全对于我们至关重要。我们将严格遵守相关法律法规，采取业内认可的合理可行的措施，保护您的个人信息。防止信息遭到未经授权的访问、披露、使用、修改，避免信息损坏或丢失。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 4. 我们使用符合业界标准的安全防护措施保护您提供的个人信息，防止数据遭到未经授权的访问、公开披露、使用、修改，防止数据发生损坏或丢失。我们会采取一切合理可行的措施，保护您的个人信息。例如使用SSL对数据进行加密保护；我们已建立访问控制机制，确保只有授权人员才可以访问个人信息；我们不时的举办个人信息保护培训，加强员工对于保护个人信息重要性的认识。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 5. 如发生个人信息安全事件后，开口笑将按照法律法规的要求向您告知：安全事件的基本情况和可能的影响、开口笑已采取或将要采取的处置措施、您可自主防范和降低风险的建议、对您的补救措施等。事件相关情况我们将以邮件、信函、电话、推送通知等方式告知您，难以逐一告知个人信息主体时，开口笑会采取合理、有效的方式发布公告。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 6. 为防止安全事故的发生，我们成立了专门的数据安全部门并制定了妥善的预警机制和应急预案。一旦发生个人信息安全事件，我们将按照法律法规的要求，及时向您告知：安全事件的基本情况和可能的影响、我们已采取或将要采取的处置措施、您可自主防范和降低风险的建议和对您的补救措施，并立即启动应急预案，力求将损失最小化。事件相关情况我们将及时以邮件、信函、电话、推送通知等方式告知您，难以逐一告知个人信息主体时，开口笑会采取合理、有效的方式发布公告。</string>
    <string name="privacy_policy_content_10">\n日志数据</string>
    <string name="privacy_policy_content_11">\n &#160;&#160;&#160;&#160;&#160;&#160; 我们想通知您，每当您使用我们的服务时，如果应用程序出错，我们会在您的手机上收集名为Log Data的数据和信息（通过第三方产品）。此日志数据可能包括设备Internet协议（“IP”）地址，设备名称，操作系统版本，使用我们的服务时应用程序配置，使用服务的时间和日期以及其他统计信息等信息。</string>
    <string name="privacy_policy_content_12">\nCookie</string>
    <string name="privacy_policy_content_13">\n &#160;&#160;&#160;&#160;&#160;&#160; Cookie是具有少量数据的文件，通常用作匿名唯一标识符。这些内容将从您访问的网站发送到您的浏览器，并存储在设备的内部存储器中。 本服务不明确使用这些“cookie”。但是，该应用程序可能会使用第三方代码和使用“cookies”的库来收集信息并改进其服务。您可以选择接受或拒绝这些cookie，并知道何时将cookie发送到您的设备。如果您选择拒绝我们的cookie，您可能无法使用本服务的某些部分。</string>
    <string name="privacy_policy_content_14">\n服务供应商</string>
    <string name="privacy_policy_content_15">\n &#160;&#160;&#160;&#160;&#160;&#160; 由于以下原因，我们可能雇用第三方公司和个人：
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 为了方便我们的服务;
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 代表我们提供服务;
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 执行与服务相关的服务;
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 协助我们分析我们的服务使用方式。
    \n\n &#160;&#160;&#160;&#160;&#160;&#160; 我们想通知本服务的用户，这些第三方可以访问您的个人信息。原因是代表我们执行分配给他们的任务。但是，他们有义务不将信息透露或用于任何其他目的。</string>
    <string name="privacy_policy_content_16">\n安全</string>
    <string name="privacy_policy_content_17">\n &#160;&#160;&#160;&#160;&#160;&#160; 我们非常重视您向我们提供您的个人信息，因此我们正在努力使用商业上可接受的方式来保护您的个人信息。但请记住，没有通过互联网传输的方法或电子存储方法100％安全可靠，我不能保证其绝对的安全性。</string>
    <string name="privacy_policy_content_18">\n与其他网站的链接</string>
    <string name="privacy_policy_content_19">\n &#160;&#160;&#160;&#160;&#160;&#160; 本服务可能包含指向其他站点的链接。如果您点击第三方链接，系统会将您定向到该网站。请注意，这些外部网站不是由我们操作的。因此，我们强烈建议您查看这些网站的隐私政策。我无法控制任何第三方网站或服务的内容，隐私政策或做法，也不承担任何责任。</string>
    <string name="privacy_policy_content_20">\n未成年人使用我们的服务</string>
    <string name="privacy_policy_content_21">\n &#160;&#160;&#160;&#160;&#160;&#160; 我们鼓励父母或监护人指导未满十八岁的未成年人使用我们的服务。我们建议未成年人鼓励他们的父母或监护人阅读本《隐私政策》，并建议未成年人在提交的个人信息之前寻求父母或监护人的同意和指导。</string>
    <string name="privacy_policy_content_22">\n变更：</string>
    <string name="privacy_policy_content_23">\n &#160;&#160;&#160;&#160;&#160;&#160; 我们可能适时修订本《隐私政策》的条款，该等修订构成本《隐私政策》的一部分。如该等修订造成您在本《隐私政策》下权利的实质减少，我们将在修订生效前通过在主页上显著位置提示或向您发送电子邮件或以其他方式通知您。在该种情况下，若您继续使用我们的服务，即表示同意受经修订的本《隐私政策》的约束。</string>
    <string name="privacy_policy_content_24">\n联系我们</string>
    <string name="privacy_policy_content_25">\n &#160;&#160;&#160;&#160;&#160;&#160; 如果您对我们的隐私政策有任何问题或建议，请随时通过 1738099872@qq.com 与我们联系。\n\n </string>
    <string name="services_agreement_title">用户服务协议</string>
</resources>