<?xml version="1.0" encoding="utf-8"?><!--修改密码页-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blank_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_30">

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        app:srcCompat="@drawable/ic_closure"
        app:tint="@color/color_ic_bg_tint" />

    <TextView
        android:id="@+id/modify_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/close"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/modify_password"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold" />

    <com.example.smile.widget.view.ClearEditText
        android:id="@+id/input_old_password"
        style="@style/InputBoxStyle"
        android:layout_below="@id/modify_info"
        android:layout_marginTop="@dimen/dp_50"
        android:hint="@string/input_old_password" />

    <com.example.smile.widget.view.PasswordEditText
        android:id="@+id/input_new_password"
        style="@style/InputBoxStyle"
        android:layout_below="@id/input_old_password"
        android:layout_marginTop="@dimen/dp_30"
        android:hint="@string/input_new_password"
        android:maxLength="18"
        app:regexType="nonnull" />

    <com.example.smile.widget.view.PasswordEditText
        android:id="@+id/input_new_password_again"
        style="@style/InputBoxStyle"
        android:layout_below="@id/input_new_password"
        android:layout_marginTop="@dimen/dp_30"
        android:hint="@string/input_new_password_confirm"
        android:maxLength="18"
        app:regexType="nonnull" />

    <com.example.smile.widget.view.SubmitButton
        android:id="@+id/btn_modify"
        style="@style/LoginButtonStyle"
        android:layout_below="@id/input_new_password_again"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/modify_confirm" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_modify"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20">

        <TextView
            android:id="@+id/encounter_problems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/encounter_problems"
            android:textColor="@color/color_login_auxiliary"
            android:textSize="@dimen/sp_16" />
    </FrameLayout>

    <TextView
        android:id="@+id/login_protocol_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/login_protocol_reminder"
        android:textSize="@dimen/sp_15" />
</RelativeLayout>